--- a/src/SchedulerView.fxml
+++ b/src/SchedulerView.fxml
@@ -62,11 +62,12 @@
                </HBox.margin>
             </JFXButton>
             </HBox>
-            <JFXListView fx:id="tasksListView" editable="true" focusTraversable="false" minWidth="80.0" VBox.vgrow="SOMETIMES">
+            <JFXListView fx:id="tasksListView" editable="true" focusTraversable="false" maxHeight="50.0" minWidth="80.0" VBox.vgrow="SOMETIMES">
                 <VBox.margin>
                     <Insets />
                 </VBox.margin>
             </JFXListView>
+         <VBox fx:id="tasksContainer" alignment="CENTER_LEFT" maxHeight="1.7976931348623157E308" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" VBox.vgrow="ALWAYS" />
         </VBox>
     </center>
    <bottom>
