Finally fixed file handling bug after many, many hours. Fixed by changing Task colour storage from JavaFX Color to AWT Color. Implementation in SchedulerController could do with tightening up and optimisation. Build is now stable.

--- a/src/SchedulerView.fxml
+++ b/src/SchedulerView.fxml
@@ -62,12 +62,12 @@
                </HBox.margin>
             </JFXButton>
             </HBox>
-            <JFXListView fx:id="tasksListView" editable="true" focusTraversable="false" maxHeight="140.0" minWidth="80.0" VBox.vgrow="SOMETIMES">
+            <JFXListView fx:id="tasksListView" editable="true" focusTraversable="false" maxHeight="500.0" minHeight="100.0" minWidth="80.0" VBox.vgrow="ALWAYS">
                 <VBox.margin>
                     <Insets />
                 </VBox.margin>
             </JFXListView>
-         <VBox fx:id="tasksContainer" alignment="CENTER_LEFT" maxHeight="1.7976931348623157E308" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" VBox.vgrow="ALWAYS" />
+         <VBox fx:id="tasksContainer" alignment="CENTER_LEFT" disable="true" maxHeight="0.0" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" visible="false" VBox.vgrow="ALWAYS" />
         </VBox>
     </center>
    <bottom>
@@ -78,20 +78,23 @@
       </JFXButton>
    </bottom>
    <top>
-      <HBox BorderPane.alignment="CENTER">
-         <children>
-            <JFXToggleButton fx:id="tasksViewSwitch" cache="true" contentDisplay="RIGHT" ellipsisString="-" focusTraversable="false" maxHeight="-Infinity" minHeight="-Infinity" onAction="#clickToggleTasksView" prefHeight="30.0" text="Show Completed Tasks" textAlignment="CENTER">
-               <font>
-                  <Font size="11.0" />
-               </font>
-            </JFXToggleButton>
-            <Pane HBox.hgrow="ALWAYS" />
-            <JFXButton fx:id="resetButton" alignment="CENTER" cache="true" contentDisplay="CENTER" focusTraversable="false" maxHeight="-Infinity" minHeight="-Infinity" onAction="#reset" prefHeight="24.0" text="RESET" textAlignment="CENTER" textFill="#d39494">
-               <HBox.margin>
-                  <Insets bottom="3.0" left="3.0" right="3.0" top="3.0" />
-               </HBox.margin>
-            </JFXButton>
-         </children>
-      </HBox>
+       <HBox BorderPane.alignment="CENTER">
+           <JFXToggleButton fx:id="tasksViewSwitch" cache="true" contentDisplay="RIGHT" ellipsisString="-"
+                            focusTraversable="false" maxHeight="-Infinity" minHeight="-Infinity"
+                            onAction="#clickToggleTasksView" prefHeight="30.0" text="Show Completed Tasks"
+                            textAlignment="CENTER">
+              <font>
+                  <Font size="11.0"/>
+              </font>
+           </JFXToggleButton>
+           <Pane HBox.hgrow="ALWAYS"/>
+           <JFXButton fx:id="resetButton" alignment="CENTER" cache="true" contentDisplay="CENTER"
+                      focusTraversable="false" maxHeight="-Infinity" minHeight="-Infinity" onAction="#reset"
+                      prefHeight="24.0" text="RESET" textAlignment="CENTER" textFill="#d39494">
+              <HBox.margin>
+                  <Insets bottom="3.0" left="3.0" right="3.0" top="3.0"/>
+              </HBox.margin>
+           </JFXButton>
+       </HBox>
    </top>
 </BorderPane>
